Lab06/cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
  labels:
    app: cache
spec:
  ports:
    - name: cache
      port: 6379
      protocol: TCP
      targetPort: 6379
  type: ClusterIP
  selector:
    app: cache
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: cache
spec:
  selector:
    matchLabels:
      app: cache
  replicas: 1
  template:
    metadata:
      labels:
        app: cache  # has to match .spec.selector.matchLabels
    spec:
      containers:
        - name: cache
          image: redis:4-alpine
          imagePullPolicy: Always
          args: ["--requirepass", "password"]
          ports:
            - containerPort: 6379
              name: cache
