Lab06/lab04.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8443
  selector:
    app: proxy
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    app: proxy     
spec:
  selector:
    matchLabels:
      app: proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: proxy     
    spec:
      containers:
        - name: proxy
          image: nginx:stable
          ports:
          - containerPort: 8443
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/
      volumes:
      - name: config-volume
        configMap:
          name: confnginx
