Lab06/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /customers
          backend:
            serviceName: lab01
            servicePort: 7070
        - path: /correlations
          backend:
            serviceName: lab02
            servicePort: 7071
